# Abby_Chatbot

./: .dockerignore  .ebignore  .env.example  .gitignore  .replit  ADMIN_ACCESS.md  ADMIN_GUIDE.md  AWS_DEPLOY.md  CHANGES_SUMMARY.md  Dockerfile  EB_DEPLOYMENT.md  LOCAL_SETUP.md  MULTI_ASPECT_README.md  Procfile  README.md  SERVERLESS_README.md  SUPER_SIMPLE_SETUP.md  TESTING_GUIDE.md  app.py  appspec.yml  aws-deploy.sh  aws-deployment-checklist.md  aws-deployment-guide.md  aws-environment-variables.md  aws-simplified-deployment-guide.md  build_fix_script.py  chatbot_architecture_diagram.py  chatbot_evaluation_report.md  chatbot_simulation_report.json  chatbot_test_results.csv  cloudformation-template.yaml  complete-aws-deployment-guide.md  demo_preprocessor.py  deploy_serverless.sh  deploy_to_eb.sh  deploy_to_ec2.sh  download_nltk_data.py  evaluation_logs.json  gunicorn.conf.py  improved_ec2_deploy.sh  (+31 more)
.ebextensions/: 01_flask.config
attached_assets/: Pasted--def-handle-policy-query-self-content-Handle-policy-questions-by-calling-t-1741755629171.txt  Pasted--def-handle-policy-query-self-content-Handle-policy-questions-by-calling-the--1741727056883.txt  Pasted-Based-on-your-question-here-s-what-I-know-Pregnancy-In-order-for-pregnancy-to-happen-sperm-need-1741744256649.txt  Pasted-Hi-I-m-Abby-I-m-here-to-provide-information-about-reproductive-healthcare-and-offer-support-Ever-1741753828246.txt  Pasted-Prompt-Option-2-Base-Prompt-Content-Type-Specific-Prompts-Generate-a-high-quality-compassionate-1741727614837.txt  Pasted-Skip-to-Content-Abortion-Policy-API-Home-Documentation-Getting-Started-Tables-Example-Queries-Fiel-1741726554722.txt  Pasted-ef-handle-policy-query-self-content-Handle-policy-questions-by-calling-the-Ab-1741748181920.txt  (+5 more)
(+124 files in other folders)
