[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bert-score>=0.3.13",
    "email-validator>=2.2.0",
    "evaluate>=0.4.3",
    "faiss-cpu>=1.10.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langdetect>=1.0.9",
    "nltk>=3.9.1",
    "openai>=1.66.1",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "ragas>=0.2.14",
    "requests>=2.32.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "trectools>=0.0.50",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
